# schizobench

./: .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_RUNNING_FINAL.txt  BENCHMARK_RUNNING_STATUS.txt  BENCHMARK_RUN_SUMMARY_MAY31_2025.txt  BENCHMARK_STARTED_MAY31_2025.txt  CLAUDE.md  CLAUDE_OPUS_4_ANALYSIS.md  CLAUDE_v2_backup.md  EPISTEMIC_SAFETY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_TURN_DESIGN.md  MULTI_TURN_V3_EXPANSION_PLAN.md  Makefile  OVERNIGHT_RUN_GUIDE.md  PRELIMINARY_RESULTS_ANALYSIS.md  RATE_LIMIT_HANDLING.md  README.md  SCHIZOBENCH_V3_SUMMARY.md  SCORING_RUBRIC.md  STREAMLINED_TOOLS.md  SchizoBench_Framework_Explanation.txt  TROUBLESHOOTING.md  USAGE_GUIDE.md  analyze_all_results.py  api_utils.py  check_overnight_status.py  fix_technique_categorization.py  gemini_models_test_results.txt  generate_anthropic_dashboard.py  generate_metrics_dashboard.py  generate_v3_dashboard_comparison.py  generate_v3_dashboard_comprehensive.py  generate_v3_dashboard_dark.py  generate_v3_dashboard_enhanced.py  generate_v3_dashboard_reification.py  high_risk_models_monitor.py  live_benchmark_dashboard.py  (+61 more)
archive/: CLAUDE_FULL.md  EXTERNAL_ATTRIBUTION_REFACTOR.md  IMPROVEMENTS_ROADMAP.md  MULTI_TURN_V3_EXPANSION_PLAN.md  README_old.md  SCHIZOBENCH_V3_SCORING_EXPLANATION.md  SCHIZOBENCH_V3_SUMMARY.md  SchizoBench_Framework_Explanation.txt  __init__.py  claude_system_prompt.txt  claude_system_prompt_enhanced.txt  count_sequences.py  debug_sequence.py  find_critical_responses.py  generate_dashboard.py  generate_v3_dashboard.py  multi_turn_sequences.py  multi_turn_sequences_v3.py  multi_turn_sequences_v3_new.py  progress_tracker.py  rerun_with_improved_detection.py  run_benchmark_v2.py  run_benchmark_v3.py  schizobench.py  schizobench.txt  schizobench_v2.py  setup_poetry.sh  test_v2.py  test_v3.py  update_to_improved_evaluator.py  verify_setup.py
results_comparison/: benchmark_summary_20250528.txt  benchmark_summary_20250530.txt
schizobench/: cli.py  model_interface.py  (+14 more)
(+101 files in other folders)
